--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,12 @@
   link: /about.html
 - name: Blog
   link: /blog.html
-- name: Staff
-  link: /staff.html
+#- name: Staff
+#  link: /staff.html
+- name: Resume
+  link: /resume.html
+- name: Contact
+  link: /contact.html
+- name: etc.
+  link: /etc.html
+
