--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
   link: /
 - name: About
   link: /about.html
+- name: Projects
+  link: /projects.html
 - name: Resume
   link: /resume.html
 - name: Contact
